--- a/homework#6.html
+++ b/homework#6.html
@@ -27,7 +27,7 @@
 </nav>
 <main>
 <header id="start">
-<h1><strong>Bread French Toast</strong></h1>
+<h1><strong>Bread French Toast by Jas</strong></h1>
 <section>
 <img src="https://i.imgur.com/YCbcxWT.gif" alt="Crunchy Bread toast" width="300" height="200"/>
 <h3><em>Yummy Bread slices</em></h3>
